--- a/projects/ajs/src/styles/variables.scss
+++ b/projects/ajs/src/styles/variables.scss
@@ -6,7 +6,7 @@ $nightColor: #bebebe;
 $nightBg: #1c2125;
 $nightShade: lighten($nightBg, 4%);
 
-$primary-color: #0172ff;
+$primary-color: #0169ff;
 $success-color: #00b36f;
 $danger-color: #ff6a00;
 $extra-color: #a847d6;
